@@ -1,3 +1,8 @@
+2005-11-05 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/Makefile.am:  List antlr-generated sources
+	in BUILT_SOURCES.
+
 2005-11-04 Braden McDaniel  <braden@endoframe.com>
 
 	Removed conversions from double-precision floating point types
